welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:38: error: ':' expected but ')' found.
def avance(n){
            ^MethodsPictureLarge:44: error: identifier expected but '}' found.
}
^